--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cross-env": "^3.1.4",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.26.1",
+    "es6-promise": "^4.1.0",
     "eslint": "^3.14.1",
     "eslint-config-airbnb-base": "^11.0.1",
     "eslint-friendly-formatter": "^2.0.7",
@@ -43,6 +44,7 @@
     "eslint-plugin-html": "^2.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eventsource-polyfill": "^0.9.6",
+    "exports-loader": "^0.6.4",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.0",
@@ -50,6 +52,7 @@
     "function-bind": "^1.1.0",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
+    "imports-loader": "^0.7.1",
     "inject-loader": "^2.0.1",
     "jquery": "^3.2.1",
     "karma": "^1.4.1",
@@ -83,7 +86,8 @@
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
-    "webpack-merge": "^2.6.1"
+    "webpack-merge": "^2.6.1",
+    "whatwg-fetch": "^2.0.3"
   },
   "engines": {
     "node": ">= 4.0.0",
