--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "lodash": "^4.17.4",
     "vue": "^2.2.2",
+    "vue-cookie": "^1.1.3",
     "vue-router": "^2.2.0",
     "vuex": "^2.2.1"
   },
