--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "bootstrap-vue": "^0.10.2",
     "lodash": "^4.17.4",
     "vue": "^2.2.2",
     "vue-cookie": "^1.1.3",
